[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Player/Bullets/ForwardDisk.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bullets/OscillatingBullet/OscillatingBulletInnerBig.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bullets/OscillatingBullet/OscillatingBulletOuterBig.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 403.12

[sub_resource type="Animation" id=2]
resource_name = "Spin"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BulletInner:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BulletInner:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BulletOuter:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BulletOuter:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ), Vector2( 1.07, 1.07 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.025, 0.025 ), Vector2( 0.05, 0.05 ) ]
}

[node name="Disk" type="Area2D"]
rotation = 6.28319
scale = Vector2( 0.05, 0.05 )
z_index = 100
collision_layer = 4
collision_mask = 40
script = ExtResource( 1 )
speed = 400.0

[node name="DiskColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletInner" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 1.07, 1.07 )
texture = ExtResource( 2 )

[node name="BulletOuter" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 1.07, 1.07 )
texture = ExtResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
autostart = true

[node name="SpinAndVibrate" type="AnimationPlayer" parent="."]
autoplay = "Spin"
playback_speed = 0.5
anims/Spin = SubResource( 2 )

[node name="DiskBirthDeath" type="AnimationPlayer" parent="."]
autoplay = "Spin"
anims/Death = SubResource( 3 )
anims/Spin = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_Disk_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Disk_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Disk_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Disk_body_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="animation_finished" from="DiskBirthDeath" to="." method="_on_DiskBirthDeath_animation_finished"]
